fix the structure in problem clone-graph

--- a/problems/clone-graph.html
+++ b/problems/clone-graph.html
@@ -1,3 +1,7 @@
+<h2>Clone graph</h2>
+
+<h3>Statement</h3>
+
 <p>
   Given a reference of a node in a
   <strong
@@ -24,6 +28,8 @@
   Each node in the graph contains a value (<code>int</code>) and a list
   (<code>List[Node]</code>) of its neighbors.
 </p>
+
+<h3>Solution</h3>
 
 <pre>
 class Node {
